bk_ida/gccida/g0/find_valid_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1131:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  find_valid_class( machine_mode m1, int n, unsigned int dest_regno) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1131:30: error: must use 'enum' tag to refer to type 'machine_mode'
reg_class  find_valid_class( machine_mode m1, int n, unsigned int dest_regno) 
                             ^
                             enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1134:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class dest_class; // [rsp+14h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1137:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class best_class; // [rsp+20h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1160:46: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
if ( ( cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class), best_size < reg_class_size[classa]) 
                                             ^~~~~~~~~
                                             regclass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1160:56: error: expected ')'
if ( ( cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class), best_size < reg_class_size[classa]) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1160:38: note: to match this '('
if ( ( cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class), best_size < reg_class_size[classa]) 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1166:44: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
best_cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class); 
                                           ^~~~~~~~~
                                           regclass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1166:54: error: expected ')'
best_cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class); 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/reload.c:1166:36: note: to match this '('
best_cost = ix86_register_move_cost( m1, ( reg_class)classa, dest_class); 
                                   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_valid_class/src/obj/reload.o] Error 1
